2016-09-27  Deniz Yuret  <dyuret@ku.edu.tr>

	* TODO8:
	# reimplement lenet using loop.
	# implement vggnet demo.
	# use Knet.dir set in Knet.jl.
	# change default padding for conv4 to be (n-1)/2
	# document KnetArray in readme. finish the under the hood section.
	# put function references in documentation.
	# update the rest of the documentation.
	# write paper for nips
	# make BLK,THR dependent on the input size? may improve final sum which is only 10x100 in this example.
	## extend benchmark tests to cover all combinations of 10,100,1000 dimensions.
	# try to measure back functions one by one as well for gpu profiling.
	# mnist2d: implement/test sparse arrays
	# for general arrays: broadcast, get/setindex, h/v/cat.
	# autograd.jl: add enough primitives to knetarray to pass the autograd tests converted to knetarrays.
	# add back cpu convolution
	# implement axpy! for KnetArray if it is worth it to get faster updates.
	# charlm: profile speed, add dropout, nlayer.
	# add transpose to KnetArray.
	# implement adam.
	# implement better unit testing.
	# 0.7: rename the 73 functions, cpu tests (add conv), v0.5 compat.

2016-09-20  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:
	# broadcasting KnetArray bug when array size 1x1.
	# extend readme with examples. revise intro. publish intro on blog. use the presentation.

2016-09-18  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:
	# new amazon aws image
	# finish cudnn, curand etc. if possible eliminate dependence on them.
	# logp should take a second argument like sum.

2016-09-16  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:
	# lenet: move cudnn calls to cuda44.jl
	# karray: checkbounds without abstractarray.
	# document KnetArray inline.
	# remove importall Base.
	# implement more efficient lstm making sure getindex does a view (transpose?)
	# citation
	# write examples/README
	# charlm fails on cpu.  change its default data file to something smaller.  small files fail gradcheck.